--- a/app.yaml
+++ b/app.yaml
@@ -4,15 +4,22 @@ services:
   github:
     branch: main
     deploy_on_push: true
-    repo: YOUR_GITHUB_USERNAME/YOUR_REPO_NAME
+    repo: noochmedia/story-producer-chatbot
   build_command: pip install -r requirements.txt
   run_command: gunicorn --config gunicorn_config.py wsgi:application
   environment_slug: python
+  env_specific_configs:
+    python_version: "3.11"  # Using 3.11 as it's more stable for production
   env:
+    - key: PORT
+      scope: RUN_TIME
+      value: "8000"
     - key: MISTRAL_API_URL
-      value: "http://162.243.42.76"
+      scope: RUN_TIME
+      value: ${MISTRAL_API_URL}
     - key: MISTRAL_API_KEY
-      value: "L2Nisrbtg4s+KBTgK5fgKRDW+bcI/lx4a8QZ7Odyv7PCO2LWA"
+      scope: RUN_TIME
+      value: ${MISTRAL_API_KEY}
   instance_size_slug: basic-xxs
   instance_count: 1
   routes:
