Switch to Digital Ocean native deployment configuration

--- a/app.yaml
+++ b/app.yaml
@@ -6,6 +6,7 @@ services:
     deploy_on_push: true
     repo: noochmedia/story-producer-chatbot
   build_command: pip install -r requirements.txt
+  run_command: python -m gunicorn wsgi:application --bind 0.0.0.0:8000
   environment_slug: python
   instance_size_slug: basic-xxs
   instance_count: 1
@@ -14,6 +15,8 @@ services:
       value: "production"
     - key: PORT
       value: "8000"
+    - key: PYTHON_VERSION
+      value: "3.11"
     - key: MISTRAL_API_URL
       value: "http://162.243.42.76"
     - key: MISTRAL_API_KEY
