--- a/app.yaml
+++ b/app.yaml
@@ -6,7 +6,7 @@ services:
     deploy_on_push: true
     repo: noochmedia/story-producer-chatbot
   build_command: pip install -r requirements.txt
-  run_command: python -m gunicorn wsgi:app --bind=0.0.0.0:8000 --worker-class=sync --workers=1
+  run_command: python -m gunicorn -c gunicorn_config.py wsgi:app
   environment_slug: python-3.11
   instance_size_slug: basic-xxs
   instance_count: 1
