--- a/requirements.txt
+++ b/requirements.txt
@@ -10,3 +10,8 @@ Jinja2==3.1.2
 MarkupSafe==2.1.3
 setuptools==69.0.3
 importlib-metadata>=6.0.0
+streamlit
+transformers
+torch
+accelerate
+python-dotenv
