--- a/requirements.txt
+++ b/requirements.txt
@@ -1,17 +1,99 @@
-flask==3.0.0
-Werkzeug==3.0.1
-gunicorn==21.2.0
-flask-cors==4.0.0
-python-dotenv==1.0.0
-requests==2.31.0
-click==8.1.7
+aiohappyeyeballs==2.4.4
+aiohttp==3.11.11
+aiosignal==1.3.2
+altair==5.5.0
+annotated-types==0.7.0
+anthropic==0.42.0
+anyio==4.7.0
+attrs==24.3.0
+bcrypt==4.2.1
+blinker==1.9.0
+cachetools==5.5.0
+certifi==2024.12.14
+cffi==1.17.1
+charset-normalizer==3.4.0
+click==8.1.3
+configparser==7.1.0
+contourpy==1.3.1
+cryptography==44.0.0
+cycler==0.12.1
+distro==1.9.0
+Flask==2.2.3
+Flask-Cors==3.0.10
+fonttools==4.55.3
+frozenlist==1.5.0
+gitdb==4.0.11
+GitPython==3.1.43
+h11==0.14.0
+httpcore==1.0.7
+httpx==0.28.1
+idna==3.10
 itsdangerous==2.1.2
 Jinja2==3.1.2
-MarkupSafe==2.1.3
-setuptools==69.0.3
-importlib-metadata>=6.0.0
-streamlit
-transformers
-torch
-accelerate
-python-dotenv
+jiter==0.8.2
+joblib==1.4.2
+jsonschema==4.23.0
+jsonschema-specifications==2024.10.1
+kiwisolver==1.4.7
+lxml==5.3.0
+Markdown==3.7
+markdown-it-py==3.0.0
+MarkupSafe==2.1.1
+matplotlib==3.10.0
+mdurl==0.1.2
+multidict==6.1.0
+narwhals==1.19.1
+nest-asyncio==1.6.0
+networkx==3.4.2
+numpy==2.2.1
+openai==0.27.0
+packaging==24.2
+pandas==2.2.3
+pdfminer.six==20231228
+pdfplumber==0.11.4
+pillow==10.4.0
+plotly==5.24.1
+propcache==0.2.1
+protobuf==5.29.2
+pyarrow==18.1.0
+pycparser==2.22
+pydantic==2.10.4
+pydantic_core==2.27.2
+pydeck==0.9.1
+Pygments==2.18.0
+PyJWT==2.10.1
+PyMuPDF==1.25.1
+pyparsing==3.2.0
+pypdfium2==4.30.1
+pyperclip==1.9.0
+PyQt5==5.15.11
+PyQt5-Qt5==5.15.16
+PyQt5_sip==12.16.1
+python-dateutil==2.9.0.post0
+python-docx==1.1.2
+python-dotenv==1.0.0
+pytz==2024.2
+PyYAML==6.0.2
+referencing==0.35.1
+requests==2.32.3
+rich==13.9.4
+rpds-py==0.22.3
+scikit-learn==1.6.0
+scipy==1.14.1
+seaborn==0.13.2
+six==1.17.0
+smmap==5.0.1
+sniffio==1.3.1
+streamlit==1.41.1
+tenacity==9.0.0
+threadpoolctl==3.5.0
+tkhtmlview==0.3.1
+toml==0.10.2
+tornado==6.4.2
+tqdm==4.67.1
+ttkbootstrap==1.10.1
+typing_extensions==4.12.2
+tzdata==2024.2
+urllib3==2.3.0
+Werkzeug==2.2.3
+yarl==1.18.3
